# XSCLoaderPlugin

./: CMakeLists.txt  README.md  conanfile.py
src/: XSCLoaderPlugin.cpp  XSCLoaderPlugin.h  XSCLoaderPlugin.json
